# KnotBraid

./: .gitignore  Noname.lkw  README.md  Tresse rectangulaire 16 brins.lkw  _snippet.txt  cleanup-build-ghost.ps1  launch-suite.ps1  launch-suite.sh
.github/workflows/: ubuntu-build.yml
Installer/: KnotBraid.iss  License-KnotBraid.txt
KnotBraidLauncher/: CMakeLists.txt
KnotBraidLauncher/resources/: resources.qrc
KnotBraidLauncher/resources/windows/: knotbraid.rc
KnotBraidLauncher/src/: MainWindow.cpp  MainWindow.h  ShellMainWindow.cpp  ShellMainWindow.h  main.cpp  shell_main.cpp
LogiBraiding/: CMakeLists.txt
LogiBraiding/Docs/: 3082 GRILLE.docx  3082-2.docx  4000.docx  ABOK_502_510_note_conceptuelle.md  ABOK_502_510_traduction_FR.md  Braindind Abok.xlsm  Cahier des charges LogiBrainding.docx  Icosagone.xlsx  LogiBraiding_sources.md  PENTALPHA 81.xlsx  Pentalpha #3082-2 - 78 brins.csv  Pentalpha #3082-2 - 78 brins.xlsx  Pentalpha 78 brins.csv  Rose des vents.csv  Rose des vents.xlsx  TABLE 3082-2.docx  TABLE 3082.docx  Tresse 3082-x.xlsx  Tresse_3082_x_calculee.xlsx  Tresse_3082_x_formules.xlsx  Tresse_3082_x_modified.xlsx  Tresses ABoK.docx  etoile 10 branches.docx  mode d'emploi.docx  shémas tresses AKB_ENG.docx
LogiBraiding/resources/: logibraiding_resources.qrc  resources.qrc
LogiBraiding/resources/windows/: logibraiding.rc
LogiBraiding/src/: main.cpp
LogiBraiding/src/app/: BraidingApplication.cpp  BraidingApplication.h
LogiBraiding/src/ui/: BraidBoardWidget.cpp  BraidBoardWidget.h  BraidingMainWindow.cpp  BraidingMainWindow.h  BraidingMainWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
LogiKnotting/: .gitattributes  .gitignore  CMakeLists.txt  README.md
LogiKnotting/docs/: Copie de tresses pleines Abok & 4000.xlsm  tresse AKB avec 81brins Pantalpha.xls  ~$Copie de tresses pleines Abok & 4000.xlsm
LogiKnotting/resources/: generer_icones.py  logiknotting_resources.qrc  resources.qrc
LogiKnotting/resources/html/: conveyor_animation.html
LogiKnotting/resources/windows/: logiknotting.rc
LogiKnotting/src/: Main.cpp
LogiKnotting/src/app/: KnottingApplication.cpp  KnottingApplication.h
LogiKnotting/src/core/: CylinderTopology.cpp  CylinderTopology.h  DirectionVector.h  GridConfig.h  Ribbon.h  RibbonMath.cpp  RibbonMath.h  SnapEngine.cpp  SnapEngine.h  Units.h
LogiKnotting/src/domain/: TopologyStore.cpp  TopologyStore.h  TopologyTypes.h
LogiKnotting/src/main/: App.cpp
LogiKnotting/src/model/: WorkspaceModel.cpp  WorkspaceModel.h
LogiKnotting/src/render/: Crossing.h  CrossingBuilder.cpp  CrossingBuilder.h  CrossingMaskItem.cpp  CrossingMaskItem.h  PointItem.cpp  PointItem.h  Segment.h  SegmentBuilder.cpp  SegmentBuilder.h  SegmentItem.cpp  SegmentItem.h  SnapHaloItem.cpp  SnapHaloItem.h
LogiKnotting/src/tools/: AbstractTool.cpp  AbstractTool.h  EraserTool.cpp  EraserTool.h  GommeTool.cpp  GommeTool.h  MoveTool.cpp  MoveTool.h  PointBleuTool.cpp  PointBleuTool.h  RepereTool.cpp  RepereTool.h  SegmentTool.cpp  SegmentTool.h  ToolPalettewidget.cpp  ToolPalettewidget.h  ToolPoint.cpp  ToolPoint.h  WrapTool.cpp  WrapTool.h
LogiKnotting/src/ui/: Animate.cpp  Animate.h  KnottingMainWindow.cpp  KnottingMainWindow.h  MainWindow.cpp  MainWindow.h  WorkspaceScene.cpp  WorkspaceScene.h  WorkspaceView.cpp  WorkspaceView.h
LogiKnotting/translations/: ar.qm  ar.ts  bg.qm  bg.ts  cs.qm  cs.ts  da.qm  da.ts  de.qm  de.ts  el.qm  el.ts  en.qm  en.ts  es.qm  es.ts  fi.qm  fi.ts  fr.qm  fr.ts  he.qm  he.ts  hu.qm  hu.ts  it.qm  it.ts  ja.qm  ja.ts  ko.qm  ko.ts  list.txt  nl.qm  nl.ts  nl_BE.qm  nl_BE.ts  no.qm  no.ts  pl.qm  pl.ts  pt.qm  (+21 more)
Noeuds/: Noeud d'or.lkw
docs/: KnotBraid-Manuel-Utilisateur.md  KnotBraid-User-Manual-en.rtf  KnotBraid-User-Manual-en.txt  Tutoriel-LogiKnotting-Storyboard.md
docs/tutorial/: Etape 1.txt  Etape 2.txt
tools/: generate-app-icons.ps1
